--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div class="sidebar">
         <a href="#about">About</a>
         <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact">Contact Us</a>
     </div>
     <div class="content">
         <h1>Welcome to MOD CITY 🏎</h1>
