--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Manufactures
+                  Available Now
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Toyota</a></li>
-                  <li><a class="dropdown-item" href="#">Suzuki</a></li>
-                  <li><a class="dropdown-item" href="#">Kia</a></li>
-                  <li><a class="dropdown-item" href="#">Volkswagon</a></li>
-                  <li><a class="dropdown-item" href="#">Tata</a></li>
+                  <li><a class="dropdown-item" href="car1.html">PORCHE 911</a></li>
+                  <li><a class="dropdown-item" href="car2.html">ford F-150</a></li>
+                  <li><a class="dropdown-item" href="car3.html">ford Explorer</a></li>
+                  <li><a class="dropdown-item" href="car4.html">Volkswagon golf</a></li>
+                  <li><a class="dropdown-item" href="car5.html">Tata harrier</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
@@ -76,9 +76,9 @@
   </div>
   <!-- side bar starts -->
   <div class="sidebar">
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact Us</a>
+        <a href="#about">About 👆</a>
+        <a href="#services">Services 👉</a>
+        <a href="contactus.html">Contact Us ✅</a>
     </div>
     <div class="content">
         <h1>Welcome to MOD CITY 🏎</h1>
