--- a/category.html
+++ b/category.html
@@ -8,34 +8,34 @@
 </head>
     <body>
         <header>
-            <h1>Car Categories</h1>
+            <h1>Car Categories (👈 MARK ON AVAILABLE MODELS) </h1>
         </header>
         <nav>
-            <a href="#sedans">Sedans</a>
+            <a href="#sedans">PERFOMANCE</a>
             <a href="#suvs">SUVs</a>
             <a href="#trucks">Trucks</a>
             <a href="#hatchbacks">Hatchbacks</a>
         </nav>
         <section id="sedans" class="category">
-            <h2>Sedans</h2>
+            <h2>PERFOMANCE</h2>
             <ul>
-                <li><a href="#">Toyota Camry</a></li>
-                <li><a href="#">Honda Accord</a></li>
-                <li><a href="#">BMW 3 Series</a></li>
+                <li><a href="car1.html">PORCHE 911 👈</a></li>
+                <li><a href="car1.html">SUPRAAAA</a></li>
+                <li><a href="#">NISSAN GTR</a></li>
             </ul>
         </section>
         <section id="suvs" class="category">
             <h2>SUVs</h2>
             <ul>
-                <li><a href="#">Toyota RAV4</a></li>
+                <li><a href="car5.html">Tata harrier 👈</a></li>
                 <li><a href="#">Honda CR-V</a></li>
-                <li><a href="#">Ford Explorer</a></li>
+                <li><a href="/car3.html">Ford Explorer 👈</a></li>
             </ul>
         </section>
         <section id="trucks" class="category">
             <h2>Trucks</h2>
             <ul>
-                <li><a href="#">Ford F-150</a></li>
+                <li><a href="car2.html">Ford F-150 👈</a></li>
                 <li><a href="#">Chevrolet Silverado</a></li>
                 <li><a href="#">Toyota Tacoma</a></li>
             </ul>
@@ -43,7 +43,7 @@
         <section id="hatchbacks" class="category">
             <h2>Hatchbacks</h2>
             <ul>
-                <li><a href="#">Volkswagen Golf</a></li>
+                <li><a href="car4.html">Volkswagen Golf 👈</a></li>
                 <li><a href="#">Honda Fit</a></li>
                 <li><a href="#">Mini Cooper</a></li>
             </ul>
